(teaser) Fix issue with small viewports and left-aligned CTA text

--- a/assets/_button.scss
+++ b/assets/_button.scss
@@ -9,6 +9,7 @@
   margin-bottom: .5em;
   cursor: pointer;
   text-decoration: none;
+  text-align: center;
 
   &--uppercase {
     text-transform: uppercase;
